test/fixtures/invalid-syntax/migrated_0079.js
({ get __proto__() { }, set __proto__(x) { } })